k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vacation-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vacation-api
  template:
    metadata:
      labels:
        app: vacation-api
    spec:
      containers:
        - name: vacation-api
          image: ghcr.io/1000bang/vacation_api:latest
          ports:
            - containerPort: 8080
