k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vacation-api-svc
  namespace: default
spec:
  selector:
    app: vacation-api
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
