k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vacation-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: 1000bang.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vacation-web-svc
                port:
                  number: 80
    - host: www.1000bang.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vacation-web-svc
                port:
                  number: 80
